--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "ifeelkiddo.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: ifeelkiddo # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: ieasyice # change to your Twitter username
 
 social:
   # Change to your full name.
