--- a/_config.yml
+++ b/_config.yml
@@ -31,14 +31,14 @@ github:
 twitter:
   username: ieasyice # change to your Twitter username
 
-social: Re4per
+social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: re4per
   email: # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/Re4per # change to your Twitter homepage
+    - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/ifeelkiddo # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
